tests/fixtures/invalid/none_in_none.py
# Cannot use 'in' with None and None
x: bool = None in None
